# Terra

./: README.md  teste.py
CodesColtrol/: main.py
PyMavlink/: getting_all_dates.py
RaspBerry Codes/Control ESC/: Control initial.py  esc.py  pwm - kgf.xlsx
RaspBerry Codes/Dates PixHawk/: main.py
TODO/: description.txt
TODO/src/: DetectGate.h
docs/: description.txt
docs/control_motors/: Disposição dos Motores.SLDDRW
docs/img/: description.txt
docs/navegation/: .$Classes AUV.drawio.bkp  Classes AUV.drawio  Diagrama de ações da navegação.asta  Diagrama de conexões feitas e não feitas.drawio  StateMachine Prototype.png.bak
docs/navigation/: Classes AUV.drawio  Diagrama de ações da navegação.asta  Diagrama de conexões prototipo.drawio  Maquina de estados 1.1.png.bak
hardware/Thrusters/: U2_Mini.SLDDRW  (+4 more)
simulations/: description.txt
software/raspberry_pi/src/navegation/navegation_5.0/: CMakeLists.txt  auv_error.cpp  auv_error.h  dk  navegation.cpp  results.txt  run.sh  run_with_dependencies.sh  sensors.cpp  thrusters.cpp  thrusters_control.cpp  yoloctrl.cpp
software/raspberry_pi/src/navegation/navegation_5.0/src/: activator.cpp  activator.h  auv_error.h  auverror.cpp  auverror.h  logs.cpp  logs.h  main_navegation.cpp  navegation.cpp  navegation.h  navigation.cpp  navigation.h  sensors.cpp  sensors.h  thrusters_control.cpp  thrustersctrl.cpp  thrustersctrl.h  utils.cpp  utils.h  yoloctrl.cpp  yoloctrl.h
software/raspberry_pi/src/navigation/navigation_5.0_mpu6050/: CMakeLists.txt  run.sh
software/raspberry_pi/src/navigation/navigation_5.0_mpu6050/src/: activator.cpp  auverror.h  logs.cpp  navigation.cpp  sensors.cpp  sensors.h  thrustersctrl.cpp  thrustersctrl.h  utils.cpp  utils.h
software/raspberry_pi/src/navigation/navigation_5.0_mpu6050/src/Nova pasta/: MPU6050Kalman.cpp  MPU6050Kalman.h
tests/: description.txt
utils/: description.txt
(+1754 files in other folders)
